--- a/general/general.css
+++ b/general/general.css
@@ -1,14 +1,19 @@
 a{
+  color: black;
+  text-decoration: none;
   font-family: Roboto, Arial;
   font-size: 14px;
   font-weight: 500;
   margin-right: 30px;
+  cursor: pointer;
+}
+a:active{
+  opacity: 0.5;
 }
 input{
   padding: 2px 10px;
 }
 body{
-  height: 30000px;
   margin: 0px;
   padding: 0px;
 }
