--- a/homepage/styles/book-section.css
+++ b/homepage/styles/book-section.css
@@ -14,9 +14,13 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   column-gap: 30px;
-  row-gap: 20px;
+  row-gap: 40px;
   justify-items: center;
   align-items: center;
+}
+
+.container-copertina{
+  display: flex;
 }
 .copertina-book{
   width: 100%;
@@ -24,7 +28,7 @@
 }
 
 .archivio-button {
-  display: block; 
+  display: block;
   margin: 20px auto;
   font-family: Roboto, Arial;
   font-size: 15px;
