--- a/servizi/servizi.css
+++ b/servizi/servizi.css
@@ -7,14 +7,18 @@
   font-size: 20px;
   font-weight: 500;
   margin: 0px;
-  margin-bottom: 5px;
-  margin-bottom: 7px;
+  margin-bottom: 15px;
 }
 
 p{
   padding: 0 15px 0 15px;
+  margin: 10px 0 10px 0;
   font-family: Roboto, Arial;
   font-size: 15px;
+}
+
+h1{
+  padding: 0 15px 0 15px;
 }
 
 .titolo-paragrafo{
